--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.8",
     "yet-another-react-lightbox": "^3.23.2"
