--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.84.2",
     "axios": "^1.9.0",
     "firebase": "^11.9.0",
     "moment": "^2.30.1",
@@ -20,6 +21,8 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
     "sweetalert2": "^11.22.0",
